--- a/app/src/main/res/layout/song_layout.xml
+++ b/app/src/main/res/layout/song_layout.xml
@@ -18,10 +18,11 @@
         android:id="@+id/text_view_song_name"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:text="Nome da Música"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_marginLeft="8dp"/>
 
 
 </LinearLayout>
