--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -28,37 +28,43 @@
         android:layout_height="250dp"
         android:layout_marginTop="30dp"
         />
-    
+
     <SeekBar
-        android:layout_marginTop="30dp"
+        android:id="@+id/seekBarTime"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#F4F1F1"
+        android:progress="40"
         android:progressTint="#F4F1F1"
-        android:thumbTint="#F4F1F1"
-        android:progress="40"/>
+        android:thumbTint="#F4F1F1" />
     
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content">
+
         <TextView
+            android:id="@+id/tvTimeStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00:00"
-            android:textColor="#F4F1F1"/>
+            android:textColor="#F4F1F1" />
+
         <TextView
+            android:id="@+id/tvTimeEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00:00"
             android:layout_alignParentRight="true"
-            android:textColor="#F4F1F1"/>
+            android:text="00:00"
+            android:textColor="#F4F1F1" />
     </RelativeLayout>
 
     <Button
+        android:id="@+id/btnPlay"
         android:layout_marginTop="30dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/play_button"
+        android:background="@drawable/ic_player"
         />
 
 </LinearLayout>
