--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -35,6 +35,7 @@
             app:layout_constraintTop_toBottomOf="@+id/button_second"></Spinner>
 
         <GridView
+            android:id="@+id/grid1"
             android:layout_width="wrap_content"
             android:layout_height="450dp"
             android:layout_marginStart="14dp"
