--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,6 +44,15 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="-1dp" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list1"
+                android:layout_width="60dp"
+                android:layout_height="116dp"
+                android:layout_marginStart="110dp"
+                android:layout_marginTop="2dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_iniciar" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
