--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,12 +40,14 @@
                 android:id="@+id/textHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="104dp"
+                android:layout_marginTop="68dp"
+                android:gravity="center"
                 android:text="Clique aqui para começar sua Experiência!"
                 android:textColor="#FFFFFF"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -54,7 +56,7 @@
             android:layout_width="309dp"
             android:layout_height="300dp"
             android:layout_marginStart="48dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:divider="#FFECECEC"
             android:dividerHeight="2sp"
             app:layout_constraintStart_toStartOf="parent"
